crates/parsing/src/grammar/snapshots/grammar_tests__expect_parse@record-access.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/expression/record-access.input
---
Input: foo.bar.baz

Start { kind: RecordAccessExpression }
  Start { kind: VariableExpression }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
  Token { kind: Period }
  Start { kind: Separated }
    Start { kind: Name }
      Token { kind: Label }
    Finish
    Token { kind: Period }
    Start { kind: Name }
      Token { kind: Label }
    Finish
  Finish
Finish

