crates/parsing/src/grammar/snapshots/grammar_tests__expect_parse@typed-variable.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/type/typed-variable.input
---
Input: 
Error { message: "expected a type" }

