crates/parsing/src/grammar/snapshots/grammar_tests__expect_parse@variable-binder.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/binder/variable-binder.input
---
Input: f
Start { kind: VariableBinder }
  Start { kind: Name }
    Token { kind: Lower }
  Finish
Finish

