crates/parsing/src/grammar/snapshots/grammar_tests__expect_parse@wildcard-binder.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/binder/wildcard-binder.input
---
Input: _
Start { kind: WildcardBinder }
  Token { kind: Underscore }
Finish

